orinoco.css
body
{
	font-size: 17px;
	margin: 0;
}
header, footer
{
	background: rgb(243 ,233, 242);
	padding: 10px;
}
main
{
	padding: 20px;
	background: rgb(243 ,233, 242, 0.5);
}
footer a
{
	text-decoration: none;
	color: black;
	font-weight: bold;
	padding: 30px;
}
h1
{
	text-align:center;
}
.logo img
{
	width: 30%;
	overflow: hidden;
}
a
{
	text-align: center;
}
.presentation
{
	display: flex;
	flex-direction:column;
	justify-content: space-around;
	margin: 20px;
}
.presentation img
{
	margin: auto;
	width: 80%;
}
@media screen and (min-width:750px)
{
	body
	{
		font-size: 20px;
	}
}

